# minprof

./: .gitignore  Cargo.toml  Makefile  README.md  output.txt
benches/: passes.rs
src/: lib.rs  main.rs
src/anon/: mod.rs
src/index/: mod.rs
src/parser/: file_header_parser.rs  gc_record.rs  mod.rs  primitive_parsers.rs  record.rs  record_parser.rs  record_stream_parser.rs
src/passes/: mod.rs  sort.rs
src/passes/dominators/: mod.rs
src/passes/edges/: mod.rs
src/passes/index/: mod.rs
src/passes/retained/: mod.rs
src/query/: html.rs  mod.rs
test/: hprof-64.html
tests/: integration.rs
tests/.expected/hprof-32/: stdout.txt
tests/.expected/hprof-64/: stdout.txt
