[package]
name = "minprof"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
nom = "8"
crossbeam-channel = "0.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "passes"
harness = false
